# drenowatz

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  generate_overview_data.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: AudioViewer-legacy.969aa07c.js  AudioViewer-legacy.9da16a01.js  AudioViewer-legacy.d8249906.js  AudioViewer-legacy.e459ffc0.js  AudioViewer.17db18e7.js  AudioViewer.70c55f4f.js  AudioViewer.d71afb28.js  AudioViewer.ffa6cca6.js  GalleryView-legacy.3b975f91.js  GalleryView-legacy.5a5db6e4.js  GalleryView-legacy.8ddfafcd.js  GalleryView-legacy.a3885517.js  GalleryView.024224c4.js  GalleryView.2fe547d1.js  GalleryView.9f65aa99.js  GalleryView.e8404598.js  OpenSeadragonViewer-legacy.7405b59c.js  OpenSeadragonViewer-legacy.8c20864b.js  OpenSeadragonViewer-legacy.9ca1f797.js  OpenSeadragonViewer-legacy.faef05ae.js  OpenSeadragonViewer.0626b282.js  OpenSeadragonViewer.31f1145e.js  OpenSeadragonViewer.423d5e9e.js  OpenSeadragonViewer.bbb8e67d.js  SelectCollection-legacy.12b31bcc.js  SelectCollection-legacy.4fa7771a.js  SelectCollection-legacy.52932c15.js  SelectCollection-legacy.d34a73cd.js  SelectCollection.52e7d562.js  SelectCollection.befc616f.js  SelectCollection.c2e9d9d1.js  SelectCollection.eeb8864e.js  VideoViewer-legacy.0c2794f1.js  VideoViewer-legacy.34f90e31.js  VideoViewer-legacy.a5b7e862.js  VideoViewer-legacy.e67ff280.js  VideoViewer.12839406.js  VideoViewer.3ebf3b50.js  VideoViewer.b9d0d9ee.js  VideoViewer.ba68d7ae.js  (+27 more)
stamps/: .flake8  Dockerfile  main.py  main_experiment.py  pyproject.toml
(+224 files in other folders)
