[tool.poetry]
name = "drenowatz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyvips = "^2.2.1"
boto3 = "^1.28.57"
python-dotenv = "^1.0.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
